# SegmentTreeProject

./: README.md
SegmentTreeInterface/: CMakeLists.txt  SegmentTree.cpp  SegmentTree.h  mainwindow.cpp  mainwindow.h
